# ClawBench

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile.base  Dockerfile.browser-use  Dockerfile.claude-code  Dockerfile.claude-code-chrome-extension  Dockerfile.claw-code  Dockerfile.codex  Dockerfile.hermes  Dockerfile.openclaw  Dockerfile.opencode  README.md  README.zh-CN.md  entrypoint.sh  pyproject.toml  run-browser-use.sh  run-claude-code-chrome-extension.sh  run-claude-code.sh  run-codex.sh  run-hermes.sh  run.sh  setup-claude-code-chrome-extension.sh  setup-claude-code.sh  setup-claw-code.sh  setup-hermes.sh  setup-openclaw.sh  setup-opencode.sh  steel-cdp-shim.py  steel-collect-artifacts.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_test_case.yml
.github/workflows/: check-docker-build.yml  ci.yml  release.yml  static-check.yml  validate-tasks.yml
data-v2/: clawbench_all_verified.jsonl
docs/: README.md  architecture.md  community.md  data_format.md  evaluation.md  growth-checklist.md  human_mode.md  installation.md  integrations.md  launch-playbook.md  openclaw_integration.md  quickstart.md  request_interceptor.md  synthetic_user.md  test_cases.md  troubleshooting.md
docs/outreach/: README.md  awesome-lists-targets.md  directories.md  executed.md  hn-show-hn.md  newsletter-pitches.md  platform-submissions.md  press-kit.md  reddit-posts.md  x-amplifiers.md  x-linkedin.md  zh-cn-channels.md
eval/: README.md  agentic_eval.md
extension-server/: pyproject.toml  server.py
leaderboard/: README.md  app.py  eval-results  requirements.txt
models/: models.example.yaml
packaging/clawbench/: pyproject.toml
packaging/clawbench/src/: clawbench
scripts/: build-aliases.py  record-hero-gif.sh  v2_validate.py
src/: README.md  tui.py
src/chrome-extension/: background.js  content.js  setup.sh
src/clawbench/: __init__.py  __main__.py  batch.py  cli.py  doctor.py  engine.py  generate_resume_pdf.py  hf_upload.py  image.py  paths.py  resume_template.json  run.py  support.py  tui.py
src/extension-server/: README.md  pyproject.toml  server.py
src/runner/: __init__.py  batch.py  run.py
src/utils/: __init__.py  paths.py
static/community/: README.md
test-cases/: README.md  lite.json  lite.schema.json
test-cases-v2/v2-047-daily-life-personal-care-taskrabbit/: task.json
test-cases-v2/v2-086-job-search-hr-cv-autofill-greenhouse-meta/: task.json
test-cases-v2/v2-089-job-search-hr-cv-autofill-simplify-jobs/: task.json
test-cases-v2/v2-091-job-search-hr-job-apply-indeed/: task.json
test-cases-v2/v2-1010-rating-voting-review-myrecipes/: task.json
test-cases-v2/v2-1033-education-learning-registration-khanacademy/: task.json
test-cases-v2/v2-1035-education-learning-enrollment-edx/: task.json
test-cases-v2/v2-1045-weworkremotely/: task.json
test-cases-v2/v2-1065b-daily-life-home-services-handy/: task.json
test-cases-v2/v2-1088-nonprofit-charity-petition-change/: task.json
test-cases-v2/v2-1093-personal-management-travel-tripit/: task.json
test-cases-v2/v2-1095-health-mealplan-eatthismuch/: task.json
test-cases-v2/v2-1097-beauty-personal-care-shopping-theordinary/: task.json
test-cases-v2/v2-1100-food-cooking-collection-myrecipes/: task.json
test-cases-v2/v2-1101-hobbies-gaming-discussion-ravelry/: task.json
test-cases-v2/v2-1102-fitness-social-post-strava/: task.json
test-cases-v2/v2-1103-fitness-club-strava/: task.json
test-cases-v2/v2-1104-fitness-edit-activity-strava/: task.json
test-cases-v2/v2-1107-hobbies-gaming-forum-boardgamegeek/: task.json
test-cases-v2/v2-1108-civic-petition-change/: task.json
test-cases-v2/v2-1111-civic-petition-change/: task.json
test-cases-v2/v2-1112-nonprofit-petition-update-change/: task.json
test-cases-v2/v2-1113-health-mealplan-eatthismuch/: task.json
test-cases-v2/v2-1114-education-enrollment-edx/: task.json
test-cases-v2/v2-1115-education-enrollment-edx/: task.json
test-cases-v2/v2-1116-education-enrollment-edx/: task.json
test-cases-v2/v2-1117/: task.json
test-cases-v2/v2-1118/: task.json
test-cases-v2/v2-1120b-services-booking-handy/: task.json
test-cases-v2/v2-1121b-services-booking-handy/: task.json
test-cases-v2/v2-1122-education-course-khanacademy/: task.json
test-cases-v2/v2-1123-education-course-khanacademy/: task.json
test-cases-v2/v2-1124-education-course-khanacademy/: task.json
test-cases-v2/v2-1125-education-course-khanacademy/: task.json
test-cases-v2/v2-1126-food-cooking-collection-myrecipes/: task.json
test-cases-v2/v2-1130-training-class-search-redcross/: task.json
test-cases-v2/v2-1131-training-add-to-cart-redcross/: task.json
test-cases-v2/v2-1132-training-enroll-course-redcross/: task.json
test-cases-v2/v2-1133-newsletter-signup-redcross/: task.json
test-cases-v2/v2-1134-chapter-finder-redcross/: task.json
test-cases-v2/v2-1135-events-tickets-ticketmaster/: task.json
test-cases-v2/v2-1136-events-tickets-ticketmaster/: task.json
test-cases-v2/v2-1137-entertainment-watchlist-trakt/: task.json
test-cases-v2/v2-1138-entertainment-watchlist-trakt/: task.json
test-cases-v2/v2-1139-travel-itinerary-tripit/: task.json
test-cases-v2/v2-1140-travel-itinerary-tripit/: task.json
test-cases-v2/v2-1141-travel-itinerary-tripit/: task.json
test-cases-v2/v2-1144-weworkremotely/: task.json
test-cases-v2/v2-1145-weworkremotely/: task.json
test-cases-v2/v2-1146-weworkremotely/: task.json
test-cases-v2/v2-1201-beauty-cart-theordinary/: task.json
test-cases-v2/v2-1202-beauty-cart-quantity-theordinary/: task.json
test-cases-v2/v2-560/: task.json
test-driver/: README.md  batch.py  pyproject.toml  run.py  tui.py
tests/: test_cli.py  test_engine.py  test_harnesses.py  test_image.py  test_paths.py  test_steel_provider.py  test_steel_shim.py
tools/: build_clawbench_lite_enc.py  probe_steel_multiclient.py
(+522 files in other folders)
