[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbench"
version = "0.2.0"
description = "Benchmarking framework for evaluating AI web agents on real-world online tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8",
    "huggingface_hub>=0.27",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
clawbench = "clawbench.tui:main"
clawbench-run = "clawbench.runner.run:main"
clawbench-batch = "clawbench.runner.batch:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clawbench", "clawbench.runner", "clawbench.utils"]

[tool.setuptools.package-data]
"clawbench.utils" = ["resume_template.json"]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
