[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "clawbench"
version = "0.2.0"
description = "Benchmarking framework for evaluating AI web agents on real-world online tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8",
    "huggingface_hub>=0.27",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
clawbench = "clawbench.tui:main"
clawbench-run = "clawbench.runner.run:main"
clawbench-batch = "clawbench.runner.batch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbench"]

[tool.hatch.build.targets.wheel.force-include]
".env" = "clawbench/_bundled/.env"
"models/models.example.yaml" = "clawbench/_bundled/models/models.example.yaml"
"models/model.schema.json" = "clawbench/_bundled/models/model.schema.json"
"test-cases" = "clawbench/_bundled/test-cases"

[tool.hatch.build.targets.sdist]
include = [
    "/.env",
    "/models/models.example.yaml",
    "/models/model.schema.json",
    "/test-cases",
    "/src/clawbench",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]
exclude = [
    "/models/models.yaml",
    "/test-output",
    "/dist",
    "/build",
]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
