# Alias distribution: identical content to ``claw-bench`` on PyPI,
# published under the un-hyphenated name. PyPI normalizes names by
# lowercasing and collapsing punctuation, so this project covers both
# ``pip install clawbench`` and ``pip install ClawBench``; the sibling
# repo-root ``pyproject.toml`` covers ``claw-bench`` / ``Claw-Bench``.
#
# The ``src/clawbench`` directory here is a symlink into the real
# package source one level up — we do not fork the code. Keep this file
# in lockstep with the root pyproject.toml (same deps, same version).

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "clawbench"
version = "0.1.0"
description = "ClawBench: Can AI Agents Complete Everyday Online Tasks? (alias distribution of claw-bench)"
readme = "../../README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Yuxuan Zhang" },
    { name = "The ClawBench Authors" },
]
keywords = [
    "benchmark",
    "ai-agents",
    "browser-automation",
    "web-agents",
    "computer-use",
    "browser-use",
    "evaluation",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "fpdf2>=2.8",
    "huggingface_hub>=0.27",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
claw-bench = "clawbench.cli:main"
clawbench = "clawbench.cli:main"

[project.urls]
Homepage = "https://claw-bench.com"
Repository = "https://github.com/reacher-z/ClawBench"
Documentation = "https://github.com/reacher-z/ClawBench#readme"
Issues = "https://github.com/reacher-z/ClawBench/issues"
Paper = "https://arxiv.org/abs/2604.08523"
Dataset = "https://huggingface.co/datasets/NAIL-Group/ClawBench"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbench"]
exclude = [
    "src/clawbench/data/models/models.yaml",
]
